[metadata]
name = zonalda
version = attr: zonalda.VERSION
author = David Huggins-Daines
author_email = district6@vdsa.ca
description = "ZOnage AdéLois Démystifié pour les Adélois.e.s"
long_description = file:README.md
license = MIT

[options]
install_requires =
    geopandas
    fastapi
packages = zonalda
include_package_data = True

[options.entry_points]
console_scripts =
    zonalda = zonalda:main

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9
